--- a/package.json
+++ b/package.json
@@ -22,5 +22,8 @@
     "hexo-renderer-stylus": "^2.0.0",
     "hexo-server": "^3.0.0",
     "hexo-theme-landscape": "^0.0.3"
+  },
+  "devDependencies": {
+    "hexo-cli": "^4.3.0"
   }
 }
